src/objects/Int_Party_Street_Address__c.object
<CustomObject>
    <description>Int Party Street Address</description>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <description>Address Line 1</description>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <description>Address Line 2</description>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_3__c</fullName>
        <description>Address Line 3</description>
        <label>Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Committed check box</description>
        <label>Committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <description>Country Code</description>
        <label>Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Address_Type_Code__c</fullName>
        <description>Party Adress Type Code</description>
        <label>Party Address Type Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Party Name</description>
        <label>Party Name</label>
        <referenceTo>Int_Party__c</referenceTo>
        <relationshipLabel>Int Party Street Addresses</relationshipLabel>
        <relationshipName>Int_Party_Street_Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Party_Number__c</fullName>
        <description>Party Number</description>
        <label>Party Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Party_Source_System__c</fullName>
        <description>Party Source System</description>
        <label>Party Source System</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Code__c</fullName>
        <description>Post Code</description>
        <label>Post Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Name__c</fullName>
        <description>Region Name</description>
        <label>Region Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Town_Name__c</fullName>
        <description>Town Name</description>
        <label>Town Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Int Party Street Address</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Party_Name__c</columns>
        <columns>Party_Number__c</columns>
        <columns>Address_Line_1__c</columns>
        <columns>Town_Name__c</columns>
        <columns>Region_Name__c</columns>
        <columns>Country_Code__c</columns>
        <columns>Post_Code__c</columns>
        <columns>Party_Address_Type_Code__c</columns>
        <columns>Address_Line_2__c</columns>
        <columns>Address_Line_3__c</columns>
        <columns>Address_Line_4__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PSA-{0000000000}</displayFormat>
        <label>Party Street Address Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Party Street Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>